Update social media links target

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <div class="row">
       <div class="col-md-12">
         <div class="social-media-wrapper text-center">
-		      <a href="https://github.com/sgdreamer7"><i class="fa fa-github colored"></i></a>
-          <a href="https://www.facebook.com/profile.php?id=100000537510281"><i class="fa fa-facebook-official colored"></i></a>
+		      <a href="https://github.com/sgdreamer7" target="_blank"><i class="fa fa-github colored"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100000537510281" target="_blank"><i class="fa fa-facebook-official colored"></i></a>
         </div>
       </div>
     </div>
