--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
         </div>
       </div>
     </div>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="text-center">
+          <span class="colored">Resume/CV: <a href="resume/VladimirSherbinaResume.pdf" target="_blank" class="colored link">PDF</a>, <a href="resume/VladimirSherbinaResume.docx" target="_blank" class="colored link">DocX</a></span>
+        </div>
+      </div>
+    </div>
     
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
