Add ProductHunt link

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
         <div class="social-media-wrapper text-center">
 		      <a href="https://github.com/sgdreamer7" target="_blank"><i class="fa fa-github colored"></i></a>
           <a href="https://www.facebook.com/profile.php?id=100000537510281" target="_blank"><i class="fa fa-facebook-official colored"></i></a>
+          <a href="https://www.producthunt.com/@new_user_283bea1237" target="_blank"><img src="images/producthunt.svg" alt="producthunt" class="producthunt-logo"></a>
+          
         </div>
       </div>
     </div>
