--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         
       <div class="row">
         <div class="col-md-12">
-        <h1 class="text-center colored">Here will be personal page for the Vladimir Sherbina.</h1>
+        <h1 class="text-center colored">Vladimir Sherbina</h1>
         <h3 class="text-center colored">Engineer. Leader. Father.</h3>
         </div>
       </div>
