--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		      <a href="https://github.com/sgdreamer7" target="_blank"><i class="fa fa-github colored"></i></a>
           <a href="https://www.facebook.com/profile.php?id=100000537510281" target="_blank"><i class="fa fa-facebook-official colored"></i></a>
           <a href="https://angel.co/vladimirsherbina" target="_blank"><i class="fa fa-angellist colored"></i></a>
-          <a href="https://www.producthunt.com/@new_user_283bea1237" target="_blank"><img src="images/producthunt.svg" alt="producthunt" class="producthunt-logo"></a>
+          <a href="https://www.producthunt.com/@new_user_283bea1237" target="_blank"><i class="fa fa-product-hunt colored"></i></a>
           
         </div>
       </div>
