feat: update resume

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
     <div class="row">
       <div class="col-md-12">
         <div class="text-center">
-          <span class="colored">Resume/CV: <a href="resume/Volodymyr Shcherbyna - Lead Software Engineer.pdf"
+          <span class="colored">Resume/CV: <a href="resume/volodymyr-shcherbyna-principal-software-engineer.pdf"
               target="_blank" class="colored link">PDF</a>, <a
-              href="resume/Volodymyr Shcherbyna - Lead Software Engineer.docx" target="_blank"
+              href="resume/volodymyr-shcherbyna-principal-software-engineer.docx" target="_blank"
               class="colored link">DocX</a></span>
         </div>
       </div>
