feat: update page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Vladimir Sherbina - Senior Software Engineer, Team Lead, Father</title>
+  <title>Volodymyr Shcherbyna - Lead Software Engineer, Father</title>
 
   <meta name="theme-color" content="#ffffff">
 
@@ -36,7 +36,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h1 class="text-center colored">Vladimir Sherbina</h1>
+        <h1 class="text-center colored">Volodymyr Shcherbyna</h1>
         <h3 class="text-center colored">Engineer. Leader. Father.</h3>
       </div>
     </div>
