feat: add medium and twitter links

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
           <a href="https://www.linkedin.com/in/vladimir-sherbina" target="_blank"><i
               class="fa fa-linkedin colored"></i></a>
           <a href="https://github.com/sgdreamer7" target="_blank"><i class="fa fa-github colored"></i></a>
+          <a href="https://medium.com/@sgdreamer7" target="_blank"><i class="fa fa-medium colored"></i></a>
+          <a href="https://twitter.com/sgdreamer7" target="_blank"><i class="fa fa-twitter colored"></i></a>
           <a href="https://www.facebook.com/profile.php?id=100000537510281" target="_blank"><i
               class="fa fa-facebook-official colored"></i></a>
           <a href="https://angel.co/vladimirsherbina" target="_blank"><i class="fa fa-angellist colored"></i></a>
