--- a/index.html
+++ b/index.html
@@ -1,92 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
+---
+layout: default
+title: "Volodymyr Shcherbyna - Personal Info"
+---
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Volodymyr Shcherbyna - Lead Software Engineer, Father</title>
+<section class="about">
+  <h2>About Me</h2>
+  <p>Software engineer with over 28 years of experience in software and hardware design, development, and maintenance of
+    robust real-time systems.</p>
+</section>
 
-  <meta name="theme-color" content="#ffffff">
-
-  <!-- Bootstrap -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- fontawesome -->
-  <script src="https://use.fontawesome.com/3db7fc1628.js"></script>
-
-
-  <!-- google font -->
-  <link href='https://fonts.googleapis.com/css?family=Cabin:400,700' rel='stylesheet' type='text/css'>
-
-  <!-- custom css -->
-  <link href="css/custom.css" rel="stylesheet" />
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-</head>
-
-<body>
-  <div class="se-pre-con"></div>
-  <div class="container">
-
-    <div class="row">
-      <div class="col-md-12">
-        <h1 class="text-center colored">Volodymyr Shcherbyna</h1>
-        <h3 class="text-center colored">Engineer. Leader. Father.</h3>
-      </div>
-    </div>
-
-
-    <div class="row">
-      <div class="col-md-12">
-        <div class="social-media-wrapper text-center">
-          <a href="https://www.linkedin.com/in/vladimir-sherbina" target="_blank"><i
-              class="fa fa-linkedin colored"></i></a>
-          <a href="https://github.com/sgdreamer7" target="_blank"><i class="fa fa-github colored"></i></a>
-          <a href="https://medium.com/@sgdreamer7" target="_blank"><i class="fa fa-medium colored"></i></a>
-          <a href="https://twitter.com/sgdreamer7" target="_blank"><i class="fa fa-twitter colored"></i></a>
-          <a href="https://www.facebook.com/profile.php?id=100000537510281" target="_blank"><i
-              class="fa fa-facebook-official colored"></i></a>
-          <a href="https://angel.co/vladimirsherbina" target="_blank"><i class="fa fa-angellist colored"></i></a>
-          <a href="https://www.producthunt.com/@new_user_283bea1237" target="_blank"><i
-              class="fa fa-product-hunt colored"></i></a>
-
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12">
-        <div class="text-center">
-          <span class="colored">Resume/CV: <a href="resume/volodymyr-shcherbyna-principal-software-engineer.pdf"
-              target="_blank" class="colored link">PDF</a>, <a
-              href="resume/volodymyr-shcherbyna-principal-software-engineer.docx" target="_blank"
-              class="colored link">DocX</a></span>
-        </div>
-      </div>
-    </div>
-
-  </div>
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="js/bootstrap.min.js"></script>
-
-  <!-- fit text -->
-  <script type="text/javascript" src="js/jquery.fittext.js"></script>
-
-  <!-- jquery countdown -->
-  <script type="text/javascript" src="js/jquery.plugin.js"></script>
-  <script type="text/javascript" src="js/jquery.countdown.js"></script>
-
-  <!--placeholder -->
-  <script type="text/javascript" src="js/jquery.placeholder.js"></script>
-
-  <script type="text/javascript" src="js/scripts.js"></script>
-</body>
-
-</html>
+<section class="skills">
+  <h2>Skills</h2>
+  <ul>
+    <li>JavaScript, TypeScript, Python, Erlang, Java, Groovy, Kotlin</li>
+    <li>AWS, GCP, Kubernetes, Docker</li>
+    <li>Postgres, MySQL, MongoDB, Redis, CouchDB, Riak</li>
+    <li>Node.js, React.js, Express.js, Nest.js, Next.js, Electron.js</li>
+    <li>Django/Rest Framework, FastAPI, Grails</li>
+    <li>Nginx, RabbitMQ, HTML/CSS/SASS/LESS/BEM</li>
+    <li>Terraform, Ansible, Teamcity, Codefresh, CircleCI</li>
+    <li>GitHub, GitLab, Bitbucket, REST API, GraphQL</li>
+  </ul>
+</section>
