feat: add social media links

--- a/index.html
+++ b/index.html
@@ -22,3 +22,25 @@ title: "Volodymyr Shcherbyna - Personal Info"
     <li>GitHub, GitLab, Bitbucket, REST API, GraphQL</li>
   </ul>
 </section>
+
+<section class="links">
+  <h2>Links</h2>
+  <ul>
+    <li><a href="https://www.linkedin.com/in/vladimir-sherbina" target="_blank"><i
+          class="fa fa-linkedin colored"></i>&nbsp;https://www.linkedin.com/in/vladimir-sherbina</a>
+    </li>
+    <li><a href="https://github.com/sgdreamer7" target="_blank"><i
+          class="fa fa-github colored"></i>&nbsp;https://github.com/sgdreamer7</a></li>
+    <li><a href="https://medium.com/@sgdreamer7" target="_blank"><i
+          class="fa fa-medium colored"></i>&nbsp;https://medium.com/@sgdreamer7</a></li>
+    <li><a href="https://twitter.com/sgdreamer7" target="_blank"><i
+          class="fa fa-twitter colored"></i>&nbsp;https://twitter.com/sgdreamer7</a></li>
+    <li><a href="https://www.facebook.com/profile.php?id=100000537510281" target="_blank"><i
+          class="fa fa-facebook-official colored"></i>&nbsp;https://www.facebook.com/profile.php?id=100000537510281</a>
+    </li>
+    <li><a href="https://angel.co/vladimirsherbina" target="_blank"><i
+          class="fa fa-angellist colored"></i>&nbsp;https://angel.co/vladimirsherbina</a></li>
+    <li><a href="https://www.producthunt.com/@new_user_283bea1237" target="_blank"><i
+          class="fa fa-product-hunt colored"></i>&nbsp;https://www.producthunt.com/@new_user_283bea1237</a></li>
+  </ul>
+</section>
