feat: update title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "Volodymyr Shcherbyna - Personal Info"
+title: "Volodymyr Shcherbyna - Engineer, Leader, Father"
 ---
 
 <section class="about">
